# OBServe

./: .gitignore  CLAUDE.md  PLAN.md  TODO.md  mockup-option-e.html  package-lock.json  package.json
.github/workflows/: release.yml
demos/: rack-classic-studio.html  rack-dark-vintage.html  rack-modern-dark.html  rack-vintage-analog.html
docs/: distribution-guide.md  distribution-plan.md  faq.html  index.html  modules.html  robots.txt  sitemap.xml  test-checklist.md
docs/css/: style.css
docs/js/: main.js
observe-api/: package-lock.json  package.json  wrangler.toml
observe-api/scripts/: generate-keys.js  generate-test-license.js
observe-api/src/: worker.js
src/: bitcrusher-processor.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/vst/: AIRWINDOWS_LICENSE.txt  README.md
src-tauri/src/: ai_actions.rs  app_capture.rs  audio.rs  audio_monitor.rs  commands.rs  ducking.rs  gemini.rs  lib.rs  narration_capture.rs  obs_config.rs  obs_launcher.rs  obs_state.rs  obs_websocket.rs  pad_capture.rs  preflight.rs  presets.rs  routing.rs  spectrum.rs  store.rs  system_monitor.rs  tray.rs  video_devices.rs  video_editor.rs  vst_manager.rs
