[package]
name = "observe"
version = "0.1.0"
description = "AI-powered OBS Studio companion"
authors = ["smythmyke"]
license = "MIT"
repository = "https://github.com/smythmyke/OBServe"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["json", "native-tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "implement",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Graphics_Gdi",
] }
windows-core = "0.58"

[profile.release]
strip = true
lto = true
codegen-units = 1
